--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
   get-version:
     runs-on: ubuntu-latest
       with:
-        - token: ${ github.token }
+        token: ${ github.token }
     steps:
       - uses: actions/checkout@v4
       - name: Fetch release version
