--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Fetch release version
         run: |
           curl -sL https://api.github.com/repos/${{ github.repository_owner }}/calibre-web/branches | \
-          jq -r ".[] | select(.name=="develop") | .commit.sha" > latest-develop-commit.txt
+          jq -r ".[] | select(.name==\"develop\") | .commit.sha" > latest-develop-commit.txt
       - name: Check for modified files
         id: git-check
         run: echo ::set-output name=modified::$([ -z "`git status --porcelain`" ] && echo "false" || echo "true")
