--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,7 +2,7 @@ name: Create and publish a Docker image
 on:
   push:
     branches: ['release']
-  workflow-dispatch:
+  workflow_dispatch:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: calibre-web
