--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: calibre-web-nd
+  IMAGE_NAME: nigeldixon/calibre-web-nd
   REPO: ${{ github.repository_owner }}/calibre-web
 jobs:
   build-and-push-image:
