--- a/.github/workflows/CheckForDevelopChanges.yml
+++ b/.github/workflows/CheckForDevelopChanges.yml
@@ -1,7 +1,7 @@
 name: Get latest develop commit
 on:
   schedule:
-    - cron:  '0 * * * *'
+    - cron:  '0 23 * * *'
   workflow_dispatch:
   
 jobs:
