--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -2,6 +2,7 @@ name: Get latest develop commit
 on:
   schedule:
     - cron:  '0 23 * * *'  
+  workflow_dispatch:
 jobs:
   get-version:
     runs-on: ubuntu-latest
