--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,7 +1,7 @@
 name: Create and publish a Docker image
 on:
-  push:
-  workflow_dispatch:
+  push
+  workflow_dispatch
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: nigeldixon/calibre-web-nd
