--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,6 +2,7 @@ name: Create and publish a Docker image
 on:
   push:
   workflow_dispatch:
+  workflow_call:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: nigeldixon/calibre-web-nd
