--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -25,3 +25,5 @@ jobs:
           git config --global user.email 'releasebot@iamdixon.net'
           git commit -am "New commits to develop branch"
           git push
+      - name: Call docker publish
+        uses: ./.github/workflows/docker-publish.yml
