--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -16,10 +16,10 @@ jobs:
           curl -sL https://api.github.com/repos/${GITHUB_REPOSITORY_OWNER}/calibre-web/branches | \
           jq -r ".[] | select(.name==\"develop\") | .commit.sha" > latest-develop-commit.txt
       - name: Check for modified files
-        id: git-check
-        run: echo "{modified}={$([ -z "`git status --porcelain`" ] && echo "false" || echo "true")}" >> $GITHUB_OUTPUT
-      - name: Commit latest release version
-        if: steps.git-check.outputs.modified == 'true'
+        id: changes
+        uses: UnicornGlobal/has-changes-action@v1.0.11 # https://github.com/marketplace/actions/has-changes
+      - name: Process changes
+        if: steps.changes.outputs.changed == 1
         run: |
           git config --global user.name 'Release Bot'
           git config --global user.email 'releasebot@iamdixon.net'
