--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -19,7 +19,7 @@ jobs:
         id: changes
         run: echo "{modified}={$([ -z "`git status --porcelain`" ] && echo "false" || echo "true")}" >> $GITHUB_OUTPUT
       - name: Show if changes
-        run: echo "Has changes ${{ steps.changes.outputs.modified }}
+        run: echo "Has changes ${{ steps.changes.outputs.modified }}"
       - name: Process changes
         if: steps.changes.outputs.changed == 'true'
         run: |
