--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -17,11 +17,11 @@ jobs:
           jq -r ".[] | select(.name==\"develop\") | .commit.sha" > latest-develop-commit.txt
       - name: Check for modified files
         id: changes
-        run: echo "{modified}={$([ -z "`git status --porcelain`" ] && echo "false" || echo "true")}" >> $GITHUB_OUTPUT
+        run: echo "{modified}={$([ -z "`git status --porcelain`" ] && echo "0" || echo "1")}" >> $GITHUB_OUTPUT
       - name: Show if changes
         run: echo "Has changes ${{ steps.changes.outputs.modified }}"
       - name: Process changes
-        if: steps.changes.outputs.changed == 'true'
+        if: steps.changes.outputs.changed == 1
         run: |
           git config --global user.name 'Release Bot'
           git config --global user.email 'releasebot@iamdixon.net'
