--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -17,9 +17,9 @@ jobs:
           jq -r ".[] | select(.name==\"develop\") | .commit.sha" > latest-develop-commit.txt
       - name: Check for modified files
         id: changes
-        run: echo "{modified}={$([ -z "`git status --porcelain`" ] && echo "0" || echo "1")}" >> $GITHUB_OUTPUT
+        uses: UnicornGlobal/has-changes-action@v1.0.11
       - name: Show if changes
-        run: echo "Has changes ${{ steps.changes.outputs.modified }}"
+        run: echo "Has changes ${{ steps.changes.outputs.changed }}"
       - name: Process changes
         if: steps.changes.outputs.changed == 1
         run: |
