--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -13,7 +13,7 @@ jobs:
           token: ${{ github.token }}
       - name: Fetch release version
         run: |
-          curl -sL https://api.github.com/repos/${GITHUB_REPOSITORY_OWNER}/calibre-web/branches | \
+          curl -sL https://api.github.com/repos/nigeldixon/calibre-web/branches | \
           jq -r ".[] | select(.name==\"develop\") | .commit.sha" > latest-develop-commit.txt
       - name: Check for modified files
         id: changes
