--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -17,9 +17,11 @@ jobs:
         run: touch change.temp
       - name: Current checksum
         run: cat latest-develop-commit.txt
+      - name: Show has changes
+        run: $([ -z "`git status --porcelain`" ] && echo "0" || echo "1")
       - name: Check for modified files
         id: changes
-        uses: UnicornGlobal/has-changes-action@v1.0.11
+        run: echo "{modified}={$([ -z "`git status --porcelain`" ] && echo "false" || echo "true")}" >> $GITHUB_OUTPUT
       - name: Show if changes
         run: echo "Has changes ${{ steps.changes.outputs.changed }}"
       - name: Process changes
