--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Current checksum
         run: cat latest-develop-commit.txt
       - name: Show has changes
-        run: [ -z "git status --porcelain" ] && echo "0" || echo "1"
+        run: echo $([ -z "git status --porcelain" ] && echo "0" || echo "1")
       - name: Check for modified files
         id: changes
         run: echo "{modified}={$([ -z "`git status --porcelain`" ] && echo "false" || echo "true")}" >> $GITHUB_OUTPUT
