--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -21,7 +21,7 @@ jobs:
         run: echo $([ -z "git status --porcelain" ] && echo "0" || echo "1")
       - name: Check for modified files
         id: changes
-        run: echo "{modified}={$([ -z "`git status --porcelain`" ] && echo "false" || echo "true")}" >> $GITHUB_OUTPUT
+        run: echo "modified=$([ -z "`git status --porcelain`" ] && echo "0" || echo "1")" >> $GITHUB_OUTPUT
       - name: Show if changes
         run: echo "Has changes ${{ steps.changes.outputs.changed }}"
       - name: Process changes
