--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -21,11 +21,14 @@ jobs:
         run: echo $([ -z "git status --porcelain" ] && echo "0" || echo "1")
       - name: Check for modified files
         id: changes
-        run: echo "modified=$([ -z "git status --porcelain" ] && echo "0" || echo "1")" >> $GITHUB_OUTPUT
+        run: |
+          modified=$([ -z "git status --porcelain" ] && echo "0" || echo "1")}
+          echo $modified
+          echo "modified=$modified" >> $GITHUB_OUTPUT
       - name: Show if changes
-        run: echo "Has changes ${{ steps.changes.outputs.changed }}"
+        run: echo "Has changes ${{ steps.changes.outputs.modified }}"
       - name: Process changes
-        if: steps.changes.outputs.changed == 1
+        if: steps.changes.outputs.modified == 1
         run: |
           git config --global user.name 'Release Bot'
           git config --global user.email 'releasebot@iamdixon.net'
