--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Check for modified files
         id: changes
         run: |
-          modified=$([ -z "git status --porcelain" ] && echo "0" || echo "1")}
+          modified=$([ -z "git status --porcelain" ] && echo "0" || echo "1")
           echo $modified
           echo "modified=$modified" >> $GITHUB_OUTPUT
       - name: Show if changes
