--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -5,7 +5,7 @@ on:
   workflow_call:
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: nigeldixon/calibre-web-nd
+  IMAGE_NAME: nigeldixon/calibre-web
   REPO: ${{ github.repository_owner }}/calibre-web
 jobs:
   build-and-push-image:
@@ -45,7 +45,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:develop
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:nightly
           labels: ${{ steps.meta.outputs.labels }}
           platforms: linux/arm64,linux/amd64
           provenance: false
