--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -18,6 +18,7 @@ jobs:
         id: changes
         run: |
           modified=$([ -z "git status --porcelain" ] && echo "0" || echo "1")
+          echo "$([ -z "git status --porcelain" ])"
           echo $modified
           echo "modified=$modified" >> $GITHUB_OUTPUT
       - name: Show if changes
