--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -14,21 +14,22 @@ jobs:
         run: |
           curl -sL https://api.github.com/repos/nigeldixon/calibre-web/branches | \
           jq -r ".[] | select(.name==\"develop\") | .commit.sha" > latest-develop-commit.txt
-      - name: Check for modified files
-        id: changes
-        run: |
-          modified=$([ -z "git status --porcelain" ] && echo "0" || echo "1")
-          echo "$([ -z "git status --porcelain" ])"
-          echo $modified
-          echo "modified=$modified" >> $GITHUB_OUTPUT
-      - name: Show if changes
-        run: echo "Has changes ${{ steps.changes.outputs.modified }}"
+     # - name: Check for modified files
+     #   id: changes
+     #   run: |
+     #     modified=$([ -z "git status --porcelain" ] && echo "0" || echo "1")
+     #     echo "$([ -z "git status --porcelain" ])"
+     #     echo $modified
+     #     echo "modified=$modified" >> $GITHUB_OUTPUT
+     # - name: Show if changes
+     #   run: echo "Has changes ${{ steps.changes.outputs.modified }}"
       - name: Process changes
-        if: steps.changes.outputs.modified == 1
+        id: changes
         run: |
           git config --global user.name 'Release Bot'
           git config --global user.email 'releasebot@iamdixon.net'
-          git commit -am "New commits to develop branch"
+          git commit -am "New commits to develop branch" && modified=1 || modified=0 
+          echo "modified=$modified" >> $GITHUB_OUTPUT
           git push
   deploy:
     needs: get-version
