--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -29,6 +29,7 @@ jobs:
           git config --global user.name 'Release Bot'
           git config --global user.email 'releasebot@iamdixon.net'
           git commit -am "New commits to develop branch" && modified=1 || modified=0 
+          echo "$modified"
           echo "modified=$modified" >> $GITHUB_OUTPUT
           git push
   deploy:
