--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -36,5 +36,8 @@ jobs:
         run: echo "Has changes ${{ steps.changes.outputs.modified }}"
   deploy:
     needs: get-version
-    if: ${{ needs.get-version.outputs.needsdeploy }} == 1
-    uses: ./.github/workflows/docker-publish.yml
+    steps:
+      - name: Show if changes
+        run: echo "Has changes ${{ needs.get-version.outputs.needsdeploy }}"
+    #if: ${{ needs.get-version.outputs.needsdeploy }} == 1
+    #uses: ./.github/workflows/docker-publish.yml
