--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -35,10 +35,6 @@ jobs:
       - name: Show if changes
         run: echo "Has changes ${{ steps.changes.outputs.modified }}"
   deploy:
-    runs-on: ubuntu-latest
     needs: get-version
-    steps:
-      - name: Show if changes
-        run: echo "Has changes ${{ needs.get-version.outputs.needsdeploy }}"
-    #if: ${{ needs.get-version.outputs.needsdeploy }} == 1
-    #uses: ./.github/workflows/docker-publish.yml
+    if: ${{ needs.get-version.outputs.needsdeploy }} == 1
+    uses: ./.github/workflows/docker-publish.yml
