--- a/.github/workflows/cleanoldruns.yml
+++ b/.github/workflows/cleanoldruns.yml
@@ -59,3 +59,18 @@ jobs:
           # what-if: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Delete publish clean old nightlypackages runs
+        uses: MajorScruffy/delete-old-workflow-runs@v0.3.0
+        id: delete-publish-cleanup-workflow-runs
+        with:
+          repository: nigeldixon/calibre-web-docker-build
+          workflow: ".github/workflows/removeoldnightlypackags.yml"
+          older-than-seconds: 86400 # 1 year in seconds
+          # created-before: "2021-12-08T16:34:00Z"
+          # actor: test@test.com
+          # branch: main
+          # event: push
+          # event: completed
+          # what-if: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
